<resources>
    <string name="greeting">Hi, %s</string>

    <string name="app_name">Epicure</string>
    <string name="search_foods">Search foods…</string>
    <string name="vegetarian">Veg</string>
    <string name="non_vegetarian">Meat</string>
    <string name="vegan">Vegan</string>
    <string name="drinks">Drinks</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="serving_size">Serving Size</string>
    <string name="category">Category</string>
    <string name="time">Time</string>
    <string name="calories">Calories</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="preparation">Preparation</string>
    <string name="click_to_add_image">Click to add image</string>
    <string name="add_preparation_step">Add Preparation Step</string>
    <string name="storage_permission_declined">Storage permission declined</string>
    <string name="choose_image_error">Choose image error</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="error">Error</string>
    
    <!-- Form validation errors -->
    <string name="error_empty_recipe_name">Recipe name cannot be empty</string>
    <string name="error_empty_recipe_serving_size">Recipe serving size cannot be empty</string>
    <string name="error_empty_recipe_category">Recipe category cannot be empty</string>
    <string name="error_empty_recipe_time">Recipe time cannot be empty</string>
    <string name="error_empty_recipe_duration">Recipe duration cannot be empty</string>
    <string name="error_empty_recipe_calories">Recipe calories cannot be empty</string>
    <string name="error_empty_recipe_ingredients">Recipe ingredients cannot be empty</string>
    <string name="error_empty_recipe_preparation_steps">Recipe preparation steps cannot be empty</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation_steps">Preparation Steps</string>
</resources>