<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/size_l"
    android:paddingEnd="@dimen/size_l">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_xxl"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Hi, Mina!" />

    <TextView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_l"
        android:background="@drawable/ic_search_background"
        android:drawablePadding="@dimen/size_l"
        android:gravity="center_vertical"
        android:padding="@dimen/size_l"
        android:text="@string/search_foods"
        app:drawableStartCompat="@drawable/ic_search"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/vegetarian_card"
        style="@style/CategoryCardView"
        app:layout_constraintEnd_toStartOf="@id/non_vegetarian_card"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <ImageView
            android:id="@+id/vegetarian_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/vegetarian"
            android:src="@drawable/ic_vegetarian" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/vegetarian_text"
        style="@style/CategoryText"
        android:text="@string/vegetarian"
        app:layout_constraintEnd_toEndOf="@id/vegetarian_card"
        app:layout_constraintStart_toStartOf="@id/vegetarian_card"
        app:layout_constraintTop_toBottomOf="@id/vegetarian_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/non_vegetarian_card"
        style="@style/CategoryCardView"
        app:layout_constraintEnd_toStartOf="@id/vegan_card"
        app:layout_constraintStart_toEndOf="@id/vegetarian_card"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <ImageView
            android:id="@+id/non_vegetarian_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/non_vegetarian"
            android:src="@drawable/ic_non_vegetarian" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/non_vegetarian_text"
        style="@style/CategoryText"
        android:text="@string/non_vegetarian"
        app:layout_constraintBaseline_toBaselineOf="@id/vegetarian_text"
        app:layout_constraintEnd_toEndOf="@id/non_vegetarian_card"
        app:layout_constraintStart_toStartOf="@id/non_vegetarian_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/vegan_card"
        style="@style/CategoryCardView"
        app:layout_constraintEnd_toStartOf="@id/drinks_card"
        app:layout_constraintStart_toEndOf="@id/non_vegetarian_card"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <ImageView
            android:id="@+id/vegan_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/vegan"
            android:src="@drawable/ic_vegan" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/vegan_text"
        style="@style/CategoryText"
        android:text="@string/vegan"
        app:layout_constraintBaseline_toBaselineOf="@id/vegetarian_text"
        app:layout_constraintEnd_toEndOf="@id/vegan_card"
        app:layout_constraintStart_toStartOf="@id/vegan_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/drinks_card"
        style="@style/CategoryCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vegan_card"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <ImageView
            android:id="@+id/drinks_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/drinks"
            android:src="@drawable/ic_drinks" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/drinks_text"
        style="@style/CategoryText"
        android:text="@string/drinks"
        app:layout_constraintBaseline_toBaselineOf="@id/vegetarian_text"
        app:layout_constraintEnd_toEndOf="@id/drinks_card"
        app:layout_constraintStart_toStartOf="@id/drinks_card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vegan_text" />

</androidx.constraintlayout.widget.ConstraintLayout>